# Course-Project

./: .gitignore  CMakeLists.txt  make.bat  todo.md
src/: BaseRenderer.cpp  BaseRenderer.h  BossScene.cpp  BossScene.h  GameRenderer.cpp  GameRenderer.h  GameScreen.cpp  GameScreen.h  GameWindow.cpp  GameWindow.h  MapScreen.cpp  MapScreen.h  ShaderManager.cpp  ShaderManager.h  StartScreen.cpp  StartScreen.h  main.cpp
src/shaders/: fragment_shader.glsl
